Fixed css color styling for proper light and dark mode based on device preference.

--- a/src/app/components/filter/filter.component.scss
+++ b/src/app/components/filter/filter.component.scss
@@ -23,5 +23,5 @@ ion-label, label {
 }
 
 .selected {
-  background: #595959;
+  background: var(--ion-color-medium);
 }
