--- a/src/app/components/keyboard/keyboard.component.css
+++ b/src/app/components/keyboard/keyboard.component.css
@@ -6,16 +6,14 @@ kbd {
 }
 
 #white-keys-container kbd {
-  background: #f8f9fa;
-  color: #212529;
-  border: solid rgba(33, 37, 41, 0);
+  background: var(--ion-white-ivory);
+  border: solid rgba(28, 32, 35, 0.2);
   -webkit-background-clip: padding-box; /* for Safari */
   background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
 }
 
 #black-keys-container kbd {
-  background: #212529;
-  color: #f8f9fa;
+  background: var(--ion-ebony-ivory);
   z-index: 2;
   border: solid rgba(33, 37, 41, 0);
   -webkit-background-clip: padding-box; /* for Safari */
