--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,8 @@
 
 /** Ionic CSS Variables **/
 :root {
+  --ion-white-ivory: #fffff0;
+  --ion-ebony-ivory: #1e2023;
   /** primary **/
   --ion-color-primary: #5260ff;
   --ion-color-primary-rgb: 82, 96, 255;
